site/css/style.scss
@import "scssDep/extends";
@import "scssDep/mixins";
@import "scssDep/variables";

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Source Sans Pro", sans-serif;
}

button {
  border: none;
  padding: 0;
  background-color: inherit;
}

h1,
h2,
h3 {
  margin: 0;
}

ul,
li {
  list-style: none;
  padding: 0;
}

p {
  margin: 0;
}
a {
  text-decoration: none;
  color: black;
  display: flex;
  align-items: center;

  &:visited {
    color: black;
  }
}

.banners,
.secondary-nav {
  display: none;
}

.container {
  padding: 0;
}

.banners {
  width: $banners_width;
  height: 140px;
  top: 0;
  left: 0;
  position: absolute;
}

.header {
  height: fit-content;
  position: relative;
  top: 0;
  left: 0;
  width: 100vw;
  z-index: 5;
}

.main-nav {
  position: fixed;
  width: 100vw;
  height: 50px;
  display: flex;
  justify-content: center;
  gap: 50px;
  font-size: 25px;
  background-color: #f8f8f8;

  &__item {
    width: 50px;
    min-width: 50px;

    &--desk {
      display: none;
    }

    .fa-bars {
      color: #ff5959;
    }
  }

  &__group {
    display: flex;
    justify-content: center;
    width: fit-content;

    .main-nav-group__item {
      flex: 1;
      min-width: 50px;

      &--search {
        background-color: #bbb8b6;
        color: #fff;
      }

      &--cart {
        flex: 2;
        display: flex;
        min-width: 100px;

        .cart__item {
          min-width: 50px;
          flex: 1;
          display: flex;
          justify-content: center;
          align-items: center;
        }

        .cart__item2 {
          background-color: #ff5959;
          font-size: 20px;
          color: #fff;
        }
      }
    }
  }
}

.secondary-header {
  padding-top: 50px;
  width: 100%;
  height: fit-content;
  display: flex;
  justify-content: center;
  align-items: center;

  .header-logo-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 150px;

    &__image {
      background-image: url("../../img/logo/logo@276x50.png");
      width: 276px;
      height: 50px;
    }
  }

  .secondary-nav {
    display: none;
    background-color: chartreuse;
    width: 570px;
    height: 100%;
    padding-top: 50px;
    flex-direction: column;

    .secondary-nav__slim {
      height: 30px;
      background-color: chocolate;
      width: 100%;
      display: flex;
      justify-content: space-between;

      .secondary-nav__slim-item {
        flex: 1;
        margin-right: 5px;
        background-color: white;
        &--search {
          margin-right: 0;
          flex: 2;
          display: flex;
          justify-content: flex-end;

          .secondary-nav__search-input {
            flex: 1;
          }

          .secondary-nav__search-icon {
            background-color: #bcb8b5;
            width: 49px;
            height: 100%;
            display: flex;
            justify-content: center;
            align-items: center;
          }
        }
      }
    }

    .secondary-nav_icons {
      margin-top: 20px;
      height: 100%;
      display: flex;
      justify-content: flex-start;
      align-items: flex-end;
      gap: 5px;

      .secondary-nav__icon {
        height: 120px;
        width: 100px;
        background-color: yellow;
        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        &--separated {
          position: absolute;
          bottom: 0;
          right: 0;
        }

        .secondary-title__item-image {
          height: 100px;
          width: 100px;
          background-color: blueviolet;
        }

        .secondary-nav__icon-title {
          font-size: 15px;
          font-weight: 600;
        }
      }
    }
  }
}

.footer {
  background-color: #f8f8f8;
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-top: 125px;

  &__header {
    background-color: #e8e6e5;
    width: 100%;
    height: 440px;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;

    .footer-header {
      &__item {
        background-color: green;
        width: 162px;
        padding-top: 40px;
        padding-bottom: 40px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
      }

      &__item-image {
        width: 85px;
        height: 60px;
        margin-bottom: 25px;
      }

      &__item-title {
        background-color: red;
        width: 100%;
        height: 18px;
        font-size: 15px;
      }

      &__item-text {
        background-color: yellow;
        width: 100%;
        font-size: 12px;
      }
    }
  }

  &__copyright {
    background-color: black;
    width: 100%;
    height: 50px;
  }

  &__contact-media {
    width: 100%;
    height: 750px;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-top: 20px;

    .footer-contact {
      &__item {
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: center;
        align-items: center;

        &--top {
          height: 160px;
        }

        &--bottom {
          height: 340px;

          .footer-contact__info {
            margin-bottom: 9px;
            font-size: 14px;
            color: #ff5959;
          }
        }

        &--main {
          display: flex;
          align-items: center;
          height: 250px;
          border-top: 1px solid #bbb8b6;
          border-bottom: 1px solid #bbb8b6;
        }

        a {
          display: flex;
          align-items: center;
          flex-direction: column;
          justify-content: center;
          height: 62px;

          p {
            margin: 0;
            padding: 0;
          }
        }
      }

      &__subscribe {
        display: flex;
        flex-direction: column;
        align-items: center;

        button {
          width: 300px;
          height: 40px;
          display: flex;
          align-items: center;
          justify-content: center;
        }

        [type="email"] {
          width: 300px;
          height: 40px;
        }
      }

      .footer-contact__privacy-terms {
        display: flex;
      }

      &__section-title {
        text-transform: uppercase;
        font-size: 14px;
        width: fit-content;
        height: 16px;
        margin-bottom: 15px;
      }

      &__media-link-container {
        // background-color: red;
        width: 32;
        height: 31px;
        display: flex;
        align-items: center;

        .footer-media-links-container__media-link {
          // background-color: white;
          padding-left: 2px;
          padding-right: 2px;
          height: 100%;
        }
      }
    }
  }

  &__copyright {
    background-color: #ff5959;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    color: #fff;
    font-size: 14px;
  }
}

.main-content {
  margin-top: $icon-size / 2;
  height: fit-content;
  background-color: #f8f8f8;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 300px;

  &::before {
    min-height: $icon-size;
    min-width: $icon-size;
    background-color: green;
    display: flex;
    justify-content: center;
    position: absolute;
    top: -$icon-size / 2;
    left: 50%;
    margin-left: -$icon-size / 2;
    content: url("example.png");
    z-index: 1;
  }

  .section-title {
    padding-top: 20px;
    padding-bottom: 20px;
    height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    width: 218px;
    font-size: 22px;
    margin-top: ($icon-size / 2) + 20px;
    margin-bottom: ($icon-size / 2);

    border-top: 2px solid black;
    border-bottom: 2px solid black;
    font-stretch: 100%;
    letter-spacing: 6px;
    font-weight: 900;
  }

  &__cards-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 7px;
    margin-bottom: ($icon-size / 2);
  }

  &__card {
    width: 325px;
    height: 136px;
    position: relative;

    .card__card-info {
      height: 76px;
      width: 170px;
      padding: 20px;
      position: absolute;
      display: flex;
      justify-content: center;
      align-items: center;
      background-color: rgba(255, 255, 255, 0.8);
      left: 0;
      bottom: 0;
      z-index: 2;
      color: #6c6964;

      h2 {
        font-size: 18px;
      }

      &::after {
        content: "";
        display: inline-block;
        width: 0;
        height: 0;
        border-bottom: 76px solid rgba(255, 255, 255, 0.8);
        border-right: 76px solid transparent;
        position: absolute;
        right: -76px;
        top: 0;
      }
    }

    &--first {
      background-image: url("../../img/main/fiestastematicas@325x136.png");
    }
    &--seccond {
      background-image: url("../../img/main/fiestaspersonajes@325x136.png");
    }
    &--third {
      background-image: url("../../img/main/accesoriosfiestas@325x136.png");
    }
  }
}

.button {
  background-color: #ff5959;
  height: 57px;
  padding: 15px 30px;
  width: fit-content;
  color: white;
}

@media (min-width: 600px) {
  .banners {
    display: flex;
    justify-content: space-between;
    &__banner {
      &--main {
        @include banner(140px, 80px, #ff5959);
        order: -1;
      }
      &--secondary-one {
        @include banner($color: #619aae);
      }
      &--secondary-two {
        @include banner($color: #f5b436);
      }

      &:hover {
        height: 140px;
      }
    }
  }

  .header {
    width: $header-width;
    position: relative;
    top: 0;
    left: calc(50% - ($header-width / 2));

    margin-bottom: 180px;

    .main-nav {
      width: $header-width;
      justify-content: flex-end;

      &__item {
        &--desk {
          display: flex;
          align-items: center;
          justify-content: center;
          width: fit-content;
          i {
            width: 50px;
            display: flex;
            justify-content: center;
            align-items: center;
          }
          p {
            font-size: 13px;
            font-weight: 400;
          }
        }

        .fa-bars {
          color: #000;
        }

        &--mobile {
          display: none;
        }

        &--media {
          a {
            width: 39px;
            display: flex;
            justify-content: center;
          }
        }
      }
    }

    .secondary-header {
      height: 280px;
      display: flex;
      justify-content: space-between;
      align-items: flex-end;

      .header-logo-container {
        width: fit-content;

        &__image {
          background-image: url("../../img/logo/logo@300x70.png");
          width: 300px;
          height: 70px;
        }
      }

      .secondary-nav {
        display: flex;
      }
    }
  }

  .brands {
    display: flex;
    background-color: blue;
    width: 100%;
    flex-direction: column;
    align-items: center;
    padding-bottom: 125px;

    .section-title {
      padding-top: 165px;
    }

    .brands-container {
      display: flex;
      flex-wrap: wrap;
      margin: 0 auto;
      padding-top: 67px;
      padding-bottom: 95px;
      justify-content: center;

      &__brand {
        background-color: coral;
        height: 75px;
        width: 150px;
        display: flex;
        align-items: center;
        justify-content: center;
      }
    }

    &__button {
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }
}

